Migrate binding-data-codec-dynamic to JUnit5
This is a mass migration. Tests are updated to use assertInstanceOf()
and other JUnit5/Java goodies we have picked up since they were written.

Change-Id: Icc9886a0f31f3b359a29cb9232938babce92e0e2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>